[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "apify-connector"
version = "1.0.0"
description = "Legal Airbnb data access via Apify - No credentials required"
readme = "README.md"
license = "MIT"
authors = [
    { name = "Rbie", email = "rbie@azuz.io" }
]
keywords = ["airbnb", "apify", "scraping", "vacation-rental", "analytics", "legal"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
requires-python = ">=3.10"
dependencies = ["httpx>=0.25.0"]

[project.optional-dependencies]
dev = ["pytest>=7.0", "pytest-asyncio>=0.21", "pytest-cov>=4.0", "black>=23.0", "ruff>=0.1", "respx>=0.20"]

[project.urls]
Homepage = "https://github.com/rabi3laser/apify-connector"
Repository = "https://github.com/rabi3laser/apify-connector"

[tool.hatch.build.targets.wheel]
packages = ["src/apify_connector"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312"]

[tool.ruff]
line-length = 100
select = ["E", "F", "I", "W"]
